vlib/v/checker/tests/empty_noreturn_fn_in_or_block_err.vv
import os

@[noreturn]
fn usage() {
}

fn main() {
	println(os.args[1] or { usage() })
}
